--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,92 @@
-#head {
-color: blue;
-font-size: medium;
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    border: none;
+  
 }
+
+
+
+#head {
+font-family: serif;
+font-size: 20px;
+font-weight: bold;
+font-style: italic;
+color: whitesmoke;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 60px;
+    align-items: center;
+    background-color: coral;
+    width: 100%;
+  
+  }
+ 
+.color {
+    color: white;
+}
+
+.nav.items {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+ #hero_img {
+    background-image: url(/image/bg_image.png);
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    
+ }
+ 
+ .hero_items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+ }
+
+ #bg_2{
+    background-image: url(/image/bg2.png);
+    /* width: 100vw; */
+    height: 100vh;
+    background-size: cover;
+ }
+ #story{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 56px;
+    font-family:serif;
+    font-style: italic;
+ }
+
+ #story2{
+    display: flex;
+    align-items: center;justify-content: center;
+ }
+
+ #gallery {
+   display: grid;
+   grid-template-columns: auto auto auto;
+   width: 100%;
+   gap: 50px;
+ }
+ 
+ .gallery-item {
+   width: 100%;
+   height: 500px;
+   position: relative;
+ }
+ 
+
+ 
+
