--- a/styles.css
+++ b/styles.css
@@ -6,66 +6,129 @@
   overflow-x: hidden;
 }
 
-#head {
-  font-size: 50px;
-  font-weight: bold;
-  font-style: italic;
-  color: whitesmoke;
-  font-family: "Brush Script MT", cursive;
-
-}
-
-nav {
+.nav-bar {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  height: 60px;
-  align-items: center;
-  background-color: coral;
-  width: 100%;
-  overflow: hidden;
+  /* align-items: center; */
+  padding: 20px 10px;
+  background-color: rgb(244, 145, 110);
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  /* position: relative; */
+  top: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  height: 15vh;
+
 }
 
-.color {
-  color: white;
+.brand {
+ display: flex;
+  font-family: "Brush Script MT", cursive;
+  color: rgb(126, 4, 73);
+  font-size: 30px;
+ margin-left: 10px;
 }
 
-.nav.items {
+.nav-items {
   display: flex;
-  justify-content: space-evenly;
-  width: 100%;
+  /* list-style-type: none; */
 }
-#dp {
-  width: 20px;
-  height: 20px;
+
+.nav-items li {
+  margin-left: 40px;
 }
-#hero_img {
-  background-image: url(/image/bg_image.png);
-  width: 100vw;
+
+.nav-items a {
+  color: white;
+  font-family: sans-serif;
+  font-style: italic;
+  font-size: 16px;
+  font-weight: bold;
+  /* transition: color 0.3s ease; */
+}
+
+.nav-items a:hover {
+  color: rgb(209, 75, 75);
+}
+
+/* by default the position is relative */
+.dropdown {
+  position: relative;
+}
+
+.dropdown-items {
+  display: none;
+  position: absolute;
+  background-color: rgba(46, 107, 52, 0.8);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-items a{
+  color: white;
+  padding: 12px 12px;
+  display: block;
+}
+
+.dropdown:hover . .dropdown-items{
+  display: block;
+}
+
+.nav-items ul li a {
+display: block;
+padding: 0 15px;
+color: black;
+line-height: 60px;
+font-size: 20px;
+}
+
+
+.hero {
+  background-image: url(./image/bg_image.png);
+  /* width: 100vw; */
   height: 100vh;
   background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* color: beige; */
+   /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 .hero_items {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
+ 
+  width: 50%%;
+  height: 60%;
+}
+
+.rib {
+  display: flex;
   justify-content: center;
-  color: white;
-  font-weight: bold;
-  margin: auto;
-  font-size: 20px; */
+  font-size: 70px;
+}
 
-  position: relative;
-  top: 50%;
-  color: rgb(161, 42, 42);
-  font-weight: bold;
-  margin: auto;
+.Date{
+  font-style: oblique;
   font-size: 30px;
-  text-align: center;
-  margin: auto;
-  font-family: "Brush Script MT", cursive;
+  font-weight: bold;
+  color: beige;
+}
 
+.coup{
+  font-family:"Brush Script MT", cursive; 
+  padding-top: 20px;
+  font-size: 80px;
+  color:rgb(114, 12, 70);
+  font-weight: bold;
+
+}
+
+.love{
+  color: rgb(235, 68, 151);
 }
 
 #bg_2 {
