--- a/styles.css
+++ b/styles.css
@@ -4,30 +4,30 @@
   text-decoration: none;
   border: none;
   overflow-x: hidden;
+  /* overflow-y: hidden; */
 }
 
 .nav-bar {
   display: flex;
   justify-content: space-between;
   /* align-items: center; */
-  padding: 20px 10px;
+  padding: 40px 1px 10px 10px;
   background-color: rgb(244, 145, 110);
   /* background-color: rgba(0, 0, 0, 0.5); */
-  /* position: relative; */
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
   position: fixed;
   height: 15vh;
-
 }
 
 .brand {
- display: flex;
+  display: flex;
   font-family: "Brush Script MT", cursive;
   color: rgb(126, 4, 73);
   font-size: 30px;
- margin-left: 10px;
+  margin-left: 10px;
 }
 
 .nav-items {
@@ -66,24 +66,23 @@
   z-index: 1;
 }
 
-.dropdown-items a{
+.dropdown-items a {
   color: white;
   padding: 12px 12px;
   display: block;
 }
 
-.dropdown:hover . .dropdown-items{
+.dropdown:hover . .dropdown-items {
   display: block;
 }
 
 .nav-items ul li a {
-display: block;
-padding: 0 15px;
-color: black;
-line-height: 60px;
-font-size: 20px;
+  display: block;
+  padding: 0 15px;
+  color: black;
+  line-height: 60px;
+  font-size: 20px;
 }
-
 
 .hero {
   background-image: url(./image/bg_image.png);
@@ -96,11 +95,10 @@ font-size: 20px;
   align-items: center;
   text-align: center;
   /* color: beige; */
-   /* background-color: rgba(0, 0, 0, 0.5); */
+  /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 .hero_items {
- 
   width: 50%%;
   height: 60%;
 }
@@ -111,23 +109,22 @@ font-size: 20px;
   font-size: 70px;
 }
 
-.Date{
+.Date {
   font-style: oblique;
   font-size: 30px;
   font-weight: bold;
   color: beige;
 }
 
-.coup{
-  font-family:"Brush Script MT", cursive; 
+.coup {
+  font-family: "Brush Script MT", cursive;
   padding-top: 20px;
   font-size: 80px;
-  color:rgb(114, 12, 70);
+  color: rgb(114, 12, 70);
   font-weight: bold;
-
 }
 
-.love{
+.love {
   color: rgb(235, 68, 151);
 }
 
@@ -156,6 +153,111 @@ font-size: 20px;
   font-family: sans-serif;
 }
 
+.prep {
+  background-image: url(./image/recpt.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+}
+
+.emp {
+  /* padding: 30px; */
+  padding-top: 20%;
+  font-size: 50px;
+  font-family: cursive;
+  font-weight: bold;
+  color: white;
+}
+
+.countdown {
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+}
+
+.time {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fig {
+  /* display: flex; */
+  font-size: 3rem;
+  color: white;
+  font-weight: bold;
+  border-radius: 50%;
+  border-color: rgb(244, 145, 110);
+  border-style: double;
+  width: 100%;
+  /* background: white; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* display: flex;
+   */
+}
+
+.word {
+  font-size: 20px;
+  font-weight: bold;
+  border-color: ;
+  width: 150%;
+  background: white;
+  color: rgb(224, 136, 136);
+}
+
+.annoc {
+  display: flex;
+  justify-content: center;
+  font-family: "Brush Script MT", cursive;
+  font-size: 60px;
+  text-decoration: underline;
+  text-underline-offset: 20px;
+}
+
+.detail {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px 0;
+}
+
+.detail::after {
+  content: "";
+  position: absolute;
+  width: 3px;
+  background-color: #ed8888;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -1px;
+} 
+
+.card {
+  /* height: 100%;
+  width: 100vh;
+  display: flex; */
+}
+
+
+
+.card-items1 {
+  padding-top: 50px;
+}
+
+.card-items2{
+  display: flex;
+  flex-direction: column;
+ justify-content: left;
+ padding-top: 40px;
+}
+
 .dinner {
   font-family: "Brush Script MT", cursive;
   font-size: 30px;
@@ -163,13 +265,6 @@ font-size: 20px;
   justify-content: center;
   align-items: center;
   color: white;
-}
-
-.bg3 {
-  background-image: url(./image/bg3.png);
-  height: 100vh;
-  width: 100%;
-  background-size: cover;
 }
 
 #gallery {
@@ -258,7 +353,7 @@ font-size: 20px;
   width: 200px;
   align-content: center;
 }
-.wed-sec{
+.wed-sec {
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -269,13 +364,13 @@ font-size: 20px;
   margin-top: 15%;
 }
 
-.assist{
+.assist {
   font-size: 70px;
   font-family: sans-serif;
 }
 
-.btn{
-  background-color:rgb(233, 100, 51);
+.btn {
+  background-color: rgb(233, 100, 51);
   color: white;
   padding: 10px 20px;
   border-radius: 30px;
